--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         /* Hero Section */
         .bg-gradient-primary {
-            background: linear-gradient(135deg, #000000 0%, #202c2a 100%);
+            background: linear-gradient(135deg, #042c58 0%, #202c2a 100%);
             position: relative;
             overflow: hidden;
         }
@@ -397,7 +397,7 @@
       <!-- Linha com logo, selo e bandeira -->
       <div class="logo-selo-bandeira-row" style="display: flex; align-items: center; justify-content: space-between; width: 100%; padding: 0 16px;">
         <img src="logo_atual.png" alt="Logo" style="height:30px;">
-        <img src="outubro_rosa.png" alt="Selo do Mês" style="height:36px;">
+        <img src="novembro_azul.png" alt="Selo do Mês" style="height:36px;">
         <img src="https://flagcdn.com/w40/br.png" alt="Bandeira do Brasil" class="bandeira" style="height:28px; margin-left:auto;">
       </div>
     </header>
@@ -408,18 +408,18 @@
             <div class="row align-items-center min-vh-50">
                 <div class="col-lg-6">
                     <h1 class="display-4 fw-bold mb-4">Bem-vindo à Top Gun Pulverizações</h1>
-                    <p class="lead mb-4">Top Gun Pulverizações, é uma empresa especializada em pulverizações agrícolas via drones de última geração. Ajudamos nossos clientes a aumentarem o lucro e melhorarem a qualidade de sua produção. Utilizamos tecnologias avançadas para alcançar um objetivo simples: otimizar sua produção, reduzir riscos e aumentar sua produtividade de forma mais eficiente minimizando perdas e mantendo o compromisso com a sustentabilidade da sua lavoura.</p>
+                    <p class="lead mb-4">Top Gun Pulverizações apoia o Novembro Azul. Este mês é um lembrete de que cuidar da saúde também faz parte da boa gestão no campo. Assim como monitoramos cada talhão para prevenir perdas, a prevenção do câncer de próstata salva vidas quando o diagnóstico é feito cedo. Incentivamos colaboradores, parceiros e clientes a conversarem com um profissional de saúde e a manterem seus exames em dia. Cuidar de quem produz é tão importante quanto cuidar da lavoura.</p>
                 </div>
                 <div class="col-lg-6 text-center">
                     <div class="hero-illustration">
                         <!-- Substitua o ícone de engrenagem por este SVG -->
                         <svg width="77" height="77" viewBox="0 0 77 77" fill="none" xmlns="http://www.w3.org/2000/svg">
                           <g>
-                            <rect x="22" y="22" width="33" height="33" rx="12" stroke="#e75480" stroke-width="6" fill="none"/>
-                            <path d="M22 22 Q10 10 22 22" stroke="#e75480" stroke-width="4" fill="none"/>
-                            <path d="M55 22 Q67 10 55 22" stroke="#e75480" stroke-width="4" fill="none"/>
-                            <path d="M22 55 Q10 67 22 55" stroke="#e75480" stroke-width="4" fill="none"/>
-                            <path d="M55 55 Q67 67 55 55" stroke="#e75480" stroke-width="4" fill="none"/>
+                            <rect x="22" y="22" width="33" height="33" rx="12" stroke="#2A5D90" stroke-width="6" fill="none"/>
+                            <path d="M22 22 Q10 10 22 22" stroke="#2A5D90" stroke-width="4" fill="none"/>
+                            <path d="M55 22 Q67 10 55 22" stroke="#2A5D90" stroke-width="4" fill="none"/>
+                            <path d="M22 55 Q10 67 22 55" stroke="#2A5D90" stroke-width="4" fill="none"/>
+                            <path d="M55 55 Q67 67 55 55" stroke="#2A5D90" stroke-width="4" fill="none"/>
                           </g>
                         </svg>
                     </div>
@@ -917,4 +917,5 @@
     </script>
 </body>
 </html>
+
 
