--- a/rendimento_cotesia.html
+++ b/rendimento_cotesia.html
@@ -273,7 +273,7 @@ function fmtDateBRfromInput(yyyy_mm_dd){ if (!yyyy_mm_dd) return ''; const [y,m,
 function nowStrSP(){ const f = new Intl.DateTimeFormat('pt-BR', { timeZone:'America/Sao_Paulo', dateStyle:'short', timeStyle:'short' }); return f.format(new Date()); }
 
 /* ===== Frente → Piloto ===== */
-const PILOTOS = { 'Frente 01': 'Victor Hugo', 'Frente 02': 'Rafael', 'Frente 03': 'Thiago' };
+const PILOTOS = { 'Frente 01': 'Victor Hugo', 'Frente 02': 'Sem piloto cadastrado!', 'Frente 03': 'Thiago' };
 function setPilotByFrente(){ const frente = document.getElementById('selFrente').value || ''; document.getElementById('txtPiloto').value = PILOTOS[frente] || ''; }
 
 /* ===== API (Apps Script Web App) ===== */
@@ -320,7 +320,7 @@ function makeRow(prefill={}){
       </div>
       <div class="row">
         <label>Qtd. Copos</label>
-        <input type="text" class="copos" placeholder="Digite a quantidade">
+        <input type="text" class="copos" placeholder="Digite a quantidade (puxado da planilha se disponível)">
       </div>
       <div class="row">
         <label>Objetivo</label>
@@ -380,6 +380,24 @@ async function doLookup(el){
     el.querySelector('.ha').value  = it.area ? String(it.area).replace('.', ',') : '';
     el.querySelector('.objetivo').value = it.objetivo || '';
 
+    // Preenche automaticamente a quantidade de copos / tubetes se o campo existir na planilha.
+    // Aceitamos várias possíveis chaves que a planilha/Apps Script pode retornar.
+    (function fillCoposIfExists(){
+      const possible = ['copos','tubetes','tubete','qtd_copos','qtd_tubetes','qtcopos','qtd_tubete','copos_qtd','tubetes_qtd'];
+      for(const k of possible){
+        if (k in it && it[k] !== null && it[k] !== undefined && String(it[k]).trim() !== ''){
+          try{
+            const v = toNumBR(it[k]);
+            // preencher com formatação brasileira, sem casas decimais
+            el.querySelector('.copos').value = fmtBR(v,0);
+          }catch(_e){
+            el.querySelector('.copos').value = String(it[k]);
+          }
+          break;
+        }
+      }
+    })();
+
     $msg.textContent = it.data ? `Carregado (Data ${it.data})` : 'Carregado';
     recalcTotals();
     updatePreview(false);
@@ -426,10 +444,10 @@ function buildMessage(){
     const obj  = (el.querySelector('.objetivo').value || '').trim();
     const st   = el.querySelector('.status').value || '—';
 
-    // Adiciona emoji conforme status
-    let statusStr = st;
-    if (st === "Finalizada") statusStr = "✅*Finalizada*";
-    else if (st === "Em andamento") statusStr = "🟠*Em* *andamento*";
+  // Adiciona emoji conforme status
+  let statusStr = st;
+  if (st === "Finalizada") statusStr = "✅ *Finalizada*";
+  else if (st === "Em andamento") statusStr = "🟠 *Em andamento*";
 
     tHa  += ha; tCop += cp;
 
@@ -507,6 +525,7 @@ function updatePreview(andScroll=true){
 
 </body>
 </html>
+
 
 
 
