--- a/status_operacional_trichogramma.html
+++ b/status_operacional_trichogramma.html
@@ -128,7 +128,7 @@
 lucide.createIcons();
 
 /* Frente → Piloto */
-const PILOTOS = { "Frente 01":"Victor Hugo", "Frente 02":"Sem Piloto Cadastrado", "Frente 03":"Tiago" };
+const PILOTOS = { "Frente 01":"Victor Hugo", "Frente 02":"Maicon", "Frente 03":"Gabriel" };
 document.getElementById("selFrente").addEventListener("change",()=>{
   document.getElementById("txtPiloto").value = PILOTOS[document.getElementById("selFrente").value] || "";
 });
@@ -203,6 +203,7 @@ function abrirWhats(){
 </script>
 </body>
 </html>
+
 
 
 
