--- a/rendimento_trichogramma.html
+++ b/rendimento_trichogramma.html
@@ -277,7 +277,7 @@ function fmtDateBRfromInput(yyyy_mm_dd){ if (!yyyy_mm_dd) return ''; const [y,m,
 function nowStrSP(){ const f = new Intl.DateTimeFormat('pt-BR', { timeZone:'America/Sao_Paulo', dateStyle:'short', timeStyle:'short' }); return f.format(new Date()); }
 
 /* ===== Frente → Piloto ===== */
-const PILOTOS = { 'Frente 01': 'Victor Hugo', 'Frente 02': 'Sem piloto cadastrado!', 'Frente 03': 'Thiago' };
+const PILOTOS = { 'Frente 01': 'Victor Hugo', 'Frente 02': 'Maicon', 'Frente 03': 'Gabriel' };
 function setPilotByFrente(){
   const frente = document.getElementById('selFrente').value || '';
   document.getElementById('txtPiloto').value = PILOTOS[frente] || '';
@@ -515,6 +515,7 @@ function updatePreview(andScroll=true){
 
 </body>
 </html>
+
 
 
 
