--- a/status_operacional_cotesia.html
+++ b/status_operacional_cotesia.html
@@ -17,13 +17,14 @@
     --radius: 12px;
     --shadow: 0 4px 6px rgba(0,0,0,0.1);
   }
-  body { background:#f8fafc; font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif; margin:0; padding:20px; }
-  header { display:flex; align-items:center; gap:8px; margin-bottom:20px; }
-  header h1 { font-size:1.2rem; color:var(--primary); display:flex; gap:8px; align-items:center; }
+  body { background:#000000; font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif; margin:0; padding:20px; }
+  header { display:flex; align-items:center; gap:8px; margin-bottom:20px; justify-content:center; }
+  header h1 { font-size:1.2rem; color:var(--primary); display:flex; gap:8px; align-items:center; justify-content:center; }
+  .vasco-logo { height:20px; margin-right:8px; display:inline-block; vertical-align:middle; filter: drop-shadow(0 0 2px rgba(0,0,0,0.25)); }
   .wrap { max-width:480px; margin:0 auto; display:flex; flex-direction:column; gap:16px; }
   .card { background:var(--card); border:1px solid var(--border); border-radius:var(--radius); padding:16px; box-shadow:var(--shadow); }
   .card h2 { font-size:16px; color:var(--primary); margin-bottom:12px; display:flex; align-items:center; gap:8px; }
-  label { font-size:1rem; color:var(--muted); margin-top:10px; display:block; }
+  label { font-size:1rem; color:#000000; margin-top:10px; display:block; }
   input, select, textarea {
     width:100%; padding:12px; border:1px solid #1e304b; border-radius:8px;
     font-size:1rem; margin-top:6px; box-sizing:border-box;
@@ -58,17 +59,17 @@
 <body>
 <header>
   <a class="btn light" href="./"><i data-lucide="arrow-left"></i> Voltar</a>
-  <h1><i data-lucide="activity"></i> Status Operação</h1>
+  <h1><img src="cruz_vasco.png" alt="Cruz de Malta" class="vasco-logo"> <i data-lucide="activity"></i> Status Operação</h1>
 </header>
 
 <div class="wrap">
   <!-- Dados gerais -->
   <section class="card">
     <h2><i data-lucide="list"></i> Dados</h2>
-    <label>Data</label>
+    <label>Data:</label>
     <input type="date" id="dtData">
 
-    <label>Frente</label>
+    <label>Frente:</label>
     <select id="selFrente">
       <option value="">Selecione…</option>
       <option value="Frente 01">Frente 01</option>
@@ -76,29 +77,29 @@
       <option value="Frente 03">Frente 03</option>
     </select>
 
-    <label>Piloto</label>
+    <label>Piloto:</label>
     <input type="text" id="txtPiloto" readonly placeholder="Automático">
 
-    <label>OS</label>
+    <label>OS:</label>
     <input type="text" id="txtOS" placeholder="Digite o número da OS">
     <button class="btn light" id="btnBuscar"><i data-lucide="search"></i> Buscar</button>
 
-    <label>Fazenda</label>
+    <label>Fazenda:</label>
     <input type="text" id="txtFaz" readonly>
 
-    <label>Código</label>
+    <label>Código:</label>
     <input type="text" id="txtCod" readonly>
 
-    <label>Horário</label>
+    <label>Horário:</label>
     <input type="text" id="txtHora" readonly>
 
-    <label>Unidade</label>
+    <label>Unidade:</label>
     <input type="text" id="txtUnidade" readonly>
 
-    <label>Quantidade de Tubetes</label>
+    <label>Quantidade de Tubetes:</label>
     <input type="text" id="txtTubetes" readonly>
 
-    <label>Status da Operação</label>
+    <label>Status da Operação:</label>
     <select id="selStatus" onchange="toggleObs()">
       <option value="🟠 Em andamento">🟠 Em andamento</option>
       <option value="🚗 Em deslocamento">🚗 Em deslocamento</option>
@@ -107,7 +108,7 @@
     </select>
 
     <div id="obsBox" style="display:none;">
-      <label>Observação</label>
+      <label>Observação:</label>
       <textarea id="txtObs"></textarea>
     </div>
   </section>
@@ -129,7 +130,7 @@
 lucide.createIcons();
 
 /* Frente → Piloto */
-const PILOTOS = { "Frente 01":"Victor Hugo", "Frente 02":"Maicon", "Frente 03":"Gabriel" };
+const PILOTOS = { "Frente 01":"Victor Hugo", "Frente 02":"Hilton", "Frente 03":"Gabriel" };
 document.getElementById("selFrente").addEventListener("change",()=>{
   document.getElementById("txtPiloto").value = PILOTOS[document.getElementById("selFrente").value] || "";
 });
@@ -137,6 +138,8 @@ document.getElementById("selFrente").addEventListener("change",()=>{
 /* Data + Hora auto */
 document.getElementById("dtData").value = new Date().toISOString().split("T")[0];
 document.getElementById("txtHora").value = new Date().toLocaleTimeString("pt-BR",{hour:"2-digit",minute:"2-digit"});
+// inicializar prévia automaticamente
+gerarPrevia();
 
 /* Buscar OS (via fetch ao Apps Script) */
 const API_URL = "https://script.google.com/macros/s/AKfycbx4JkGENMvPbqdcO2Id0qzRRobj6xrf_hW1FESTsZwktIj734pHsWm7DImvHIynObzCGg/exec"; // troque pelo seu /exec
@@ -162,6 +165,8 @@ async function buscarOS(){
       }
     }
     document.getElementById("txtTubetes").value = qtdTubetes;
+    // atualizar prévia automaticamente após preencher os dados
+    gerarPrevia();
   } else {
     alert("OS não encontrada.");
   }
@@ -197,6 +202,14 @@ function gerarPrevia(){
   document.getElementById("preview").textContent = msg;
 }
 
+// Atualizar prévia automaticamente quando campos mudarem
+['dtData','selFrente','txtPiloto','txtOS','txtFaz','txtCod','txtHora','txtUnidade','txtTubetes','selStatus','txtObs'].forEach(id=>{
+  const el = document.getElementById(id);
+  if (!el) return;
+  const ev = (el.tagName === 'SELECT' || el.tagName === 'BUTTON') ? 'change' : 'input';
+  el.addEventListener(ev, () => gerarPrevia());
+});
+
 /* Copiar / WhatsApp */
 async function copiarMsg(){
   await navigator.clipboard.writeText(document.getElementById("preview").textContent);
@@ -213,6 +226,7 @@ function abrirWhats(){
 </script>
 </body>
 </html>
+
 
 
 
